--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
     "@types/react-dom": "^16.9.10",
     "@types/react-router": "^5.1.8",
     "@types/react-router-dom": "^5.1.6",
+    "@types/redux": "^3.6.0",
+    "@types/redux-devtools": "^3.0.47",
+    "@types/redux-devtools-extension": "^2.13.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "redux": "^4.0.5",
     "typescript": "^4.1.2",
     "web-vitals": "^0.2.4"
   },
